--- a/scss/common.scss
+++ b/scss/common.scss
@@ -62,6 +62,7 @@
 @import 'common/form-d-editor';
 @import 'common/form-select-kit';
 @import 'common/header';
+@import 'common/lightbox';
 @import 'common/list-control';
 @import 'common/login';
 @import 'common/material-icons';
@@ -75,6 +76,7 @@
 @import 'common/share';
 @import 'common/spinner';
 @import 'common/table';
+@import 'common/tag';
 @import 'common/timeline';
 @import 'common/topic-list';
 @import 'common/topic-list-category';
