--- a/scss/common/_cooked.scss
+++ b/scss/common/_cooked.scss
@@ -2,8 +2,6 @@
   line-height: $line-height-base;
 
   .topic-body & {
-    margin-right: ($card-padding-x * -1);
-    margin-left: ($card-padding-x * -1);
     padding: 0 $card-padding-x;
   }
 
@@ -56,9 +54,11 @@
     width: calc(100% + #{$card-padding-x * 2});
   }
 
-  img:not(.avatar):not(.emoji):not(.site-icon):not(.thumbnail) {
-    height: auto;
-    max-width: 100%;
+  img:not(.thumbnail) {
+    body & {
+      height: auto;
+      max-width: 100%;
+    }
   }
 
   ol,
@@ -87,6 +87,33 @@
 
     &:empty {
       margin-top: ($card-inner-spacer-y * -1);
+    }
+  }
+
+  table {
+    border: $border-width solid color-chooser($table-border-color-dark, $table-border-color-light);
+    margin-bottom: $spacer;
+    width: 100%;
+
+    tbody {
+      td,
+      th {
+        @include tbody-cell;
+      }
+    }
+
+    thead {
+      td,
+      th {
+        @include thead-cell;
+      }
+    }
+  }
+
+  tbody:last-child &,
+  thead:last-child & {
+    tr:last-child {
+      border-bottom: 0;
     }
   }
 }
@@ -169,29 +196,20 @@
 }
 
 .lightbox-wrapper {
-  margin-bottom: $card-inner-spacer-y;
-
   .cooked & {
     display: block;
     margin-right: ($card-padding-x * -1);
+    margin-bottom: $card-inner-spacer-y;
     margin-left: ($card-padding-x * -1);
-
-    img {
-      max-height: none;
-      width: 100%;
-    }
-
-    + a {
-      display: block;
-      margin-top: ($card-inner-spacer-y / -2);
-
-      + p {
-        display: block;
-      }
-    }
 
     .lightbox {
       display: block;
+
+      &:hover {
+        .discourse-no-touch & {
+          box-shadow: none;
+        }
+      }
     }
   }
 }
