Fix `.small-action` in post

--- a/scss/common/_badge.scss
+++ b/scss/common/_badge.scss
@@ -20,6 +20,10 @@
   border: 0;
 }
 
+.badge-notification.clicks {
+  padding: $code-padding;
+}
+
 .badge-wrapper {
   font-size: $font-size-sm;
   font-weight: normal;
