Convert `fa-share`

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -423,6 +423,10 @@
   @include material-icons('search');
 }
 
+.fa-share {
+  @include material-icons('share');
+}
+
 .fa-shield,
 .fa-shield-alt {
   @include material-icons('security');
